just minor tweaks and comments add

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Odin Recipes</h1> <!-- title-->
     <ul>
         <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
-        <li><a href="./recipes/sushi.html">Sushi Recipe</a></li>
+        <li><a href="./recipes/sushi.html">Sushi Recipe</a></li>  <!--links to recipes-->
         <a href="./recipes/water.html">Water Recipe</a>
     </ul>
     
