--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>World's Best Lasagna</h1>
-    <a href="../index.html">Home</a>
-    <img src="../images/lasagna.webp" alt="a delicious lasagna">
+    <a href="../index.html">Home</a><!-- link to home-->
+    <img src="../images/lasagna.webp" alt="a delicious lasagna"><!-- image-->
     <h2>Description</h2>
     <p>How to Make Lasagna Step-By-Step
 Here's a very brief overview of what you can expect when you make homemade lasagna:
@@ -30,5 +30,22 @@ Mozzarella slices
 Meat sauce
 Parmesan cheese
 Repeat the layers, then top with the remaining Parmesan.</p>
+<h2>Ingredients</h2>
+<ul>
+    <li>1 pound sweet Italian sausage
+
+</li>
+<li>¾ pound lean ground beef
+
+</li>
+<li>Figure out the rest yourself, there's like 15 more items which I am not going to type out.</li>
+
+</ul>
+<ol>
+    <li>Gather all your ingredients.
+
+</li>
+<li>Once again, figure it all out, shouldn't be hard, just use your head</li>
+</ol>
 </body>
 </html>
