--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Free-style sushi</h1>
-    <a href="../index.html">Home</a>
-    <img src="../images//sushi.jpg">
+    <a href="../index.html">Home</a><!-- link to home-->
+    <img src="../images//sushi.jpg" alt="sushi platter"><!-- image-->
     <p>Do whatever you want, sushi has a lot of variety</p>
     
 </body>
