--- a/recipes/water.html
+++ b/recipes/water.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Water Free-style</h1>
-    <a href="../index.html">Home</a>
-    <img src="../images//water.jpg">
+    <h1>Water Free-style</h1> <!-- title-->
+    <a href="../index.html">Home</a><!-- link to home-->
+    <img src="../images//water.jpg" alt="glass of water"><!-- image-->
     <p>If you have lived to be able to read, you should know how to make water yourself, good luck</p>
     
 </body>
